# aihwkit-lightning

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  log.err  log.out  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/workflows/: commit_check.yml  formatting_check.yml
docs/: Makefile  README.md  follow_along.py  requirements_doc.txt
docs/source/: api_reference.rst  conf.py  index.rst  install.rst  post_training_calibration.rst  user_guide.rst
docs/source/api/: aihwkit_lightning.exceptions.rst  aihwkit_lightning.inference.calibration.calibration.rst  aihwkit_lightning.inference.calibration.rst  aihwkit_lightning.inference.rst  aihwkit_lightning.nn.conversion.rst  aihwkit_lightning.nn.export.rst  aihwkit_lightning.nn.rst  aihwkit_lightning.optim.analog_optimizer.rst  aihwkit_lightning.optim.rst  aihwkit_lightning.rst  aihwkit_lightning.simulator.configs.configs.rst  aihwkit_lightning.simulator.configs.rst  aihwkit_lightning.simulator.parameters.enums.rst  aihwkit_lightning.simulator.parameters.helpers.rst  aihwkit_lightning.simulator.parameters.inference.rst  aihwkit_lightning.simulator.parameters.io.rst  aihwkit_lightning.simulator.parameters.mapping.rst  aihwkit_lightning.simulator.parameters.pre_post.rst  aihwkit_lightning.simulator.parameters.rst  aihwkit_lightning.simulator.rst  aihwkit_lightning.version.rst  modules.rst
examples/aihwkit_evaluation/: README.md  evaluation.py  model.py
examples/basic_huggingface/: README.md  pyproject.toml  test_huggingface.py
examples/deepspeed_and_huggingface/: README.md  config.yaml  ds_config.json  launch_accelerate.sh  pyproject.toml  slurm.sh  train.py  utils.py
examples/deepspeed_cifar10/: README.md  cifar10_deepspeed.py  plot_losses.py  pyproject.toml  run_ds.sh
src/aihwkit_lightning/: __init__.py  exceptions.py  version.py
src/aihwkit_lightning/inference/: __init__.py
src/aihwkit_lightning/inference/calibration/: __init__.py  calibration.py
src/aihwkit_lightning/nn/: __init__.py  conversion.py  export.py
src/aihwkit_lightning/nn/modules/: __init__.py  base.py  container.py  conv.py  linear.py
src/aihwkit_lightning/nn/modules/rnn/: __init__.py  cells.py  layers.py  rnn.py
src/aihwkit_lightning/nn/modules/torch_utils/: __init__.py  quant_utils.py  torch_abs_max.py  torch_linear.py
src/aihwkit_lightning/nn/modules/triton_utils/: __init__.py  abs_max.py  triton_abs_max.py  triton_linear.py  triton_std.py  triton_utils.py
src/aihwkit_lightning/optim/: __init__.py  analog_optimizer.py
src/aihwkit_lightning/simulator/: __init__.py
src/aihwkit_lightning/simulator/configs/: __init__.py  configs.py
src/aihwkit_lightning/simulator/parameters/: __init__.py  enums.py  helpers.py  inference.py  io.py  mapping.py  pre_post.py
tests/: conftest.py  test_calibration.py  test_conversion.py  test_correctness_against_aihwkit.py  test_correctness_triton_mode.py  test_export.py  test_huggingface.py  test_methods.py  test_post_training_weight_quantization.py  test_speed.py
