[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"
name = "aihwkit_lightning"
version = "2.0.1"
authors = [
  {name = "Corey Lammie", email = "corey.lammie@ibm.com"},
  {name = "William Simon", email = "william.simon1@ibm.com"},
  {name = "Julian Buechel", email = "jub@zurich.ibm.com"},
]
maintainers = [
  {name = "Julian Buechel", email = "jub@zurich.ibm.com"}
]
description = "IBM Analog Hardware Acceleration Kit - Lightning"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = [
    "torch>=1.10.0",
    "typing_extensions>=4.0.0",
    "tqdm",
]
keywords = [
    "ai",
    "analog",
    "rpu",
    "torch",
    "memristor",
    "pcm",
    "reram",
    "crossbar",
    "in-memory",
    "nvm",
    "non-von-neumann",
    "non-volatile memory",
    "phase-change material"
]
[project.optional-dependencies]
dev = [
    "mypy==1.8.0",
    "pylint==2.17.7",
    "pycodestyle==2.11.1",
    "black==24.3.0",
    "pytest",
]
huggingface = [
    "transformers>=4.20.0",
    "datasets",
]
triton = [
    "triton>=2.0.0",
]

[project.urls]
Paper = "https://openreview.net/forum?id=QNdxOgGmhR"
Documentation = "https://aihwkit-lightning.readthedocs.io/en/latest/"
Repository = "https://github.com/IBM/aihwkit-lightning"
Issues = "https://github.com/IBM/aihwkit-lightning/issues"
Changelog = "https://github.com/IBM/aihwkit-lightning/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["operator", "index", "union-attr"]

