[project]
name = "basic-huggingface-example"
version = "0.1.0"
description = "Example showing huggingface compatibility with aihwkit-lightning"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "transformers",
    "datasets",
    "evaluate",
    "scipy",
    "scikit-learn",
    "accelerate>=1.1.0",
    "aihwkit-lightning",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
aihwkit-lightning = { path = "../..", editable = true }
